# aoc2021

./: .ghcid  README.md  aoc2021.cabal
src/: Advent.hs
src/Advent/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Prelude.hs
