cabal-version:       >=1.10
name:                aoc2021
version:             0.1.0.0
license-file:        LICENSE
author:              Josh Miller
maintainer:          notjoshmiller@gmail.com
build-type:          Simple
extra-source-files:  README.md

library advent
  build-depends:       
    base < 5,
    array,
    attoparsec,
    bytestring,
    containers,
    split,
    text,
    unordered-containers,
    vector
  default-language:    
    Haskell2010
  hs-source-dirs:    
    src
  exposed-modules:
    Advent
    Advent.Prelude
  other-modules:
    Advent.Day1
    Advent.Day2
    Advent.Day3
    Advent.Day4
    Advent.Day5
    Advent.Day6
    Advent.Day7
    Advent.Day8
  default-extensions: 
    NoImplicitPrelude,
    OverloadedStrings
